[package]
name = "rusty-shorturl"
version = "0.1.0"
authors = ["Allen Thomas Varghese <allentv4u@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
env_logger = "0.8.2"

[dev-dependencies]
actix-rt = "1.1.1"
