[package]
name = "rusty-shorturl"
version = "0.1.0"
authors = ["Allen Thomas Varghese <allentv4u@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool"]

[global.databases]
shorty_db = { url = "./shorty_db.sqlite" }


[dependencies]
rocket = "0.4.7"

[dev-dependencies]
