[package]
name = "rusty-shorturl"
version = "0.1.0"
authors = ["Allen Thomas Varghese <allentv4u@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool", "json"]


[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"

[dev-dependencies]
